# nostr-simulator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SETUP_ALTERNATIVES.md  SIMULATOR.md  TODO.md  changelog.md  config.yaml  demo_core_metrics.py  demo_replay_attack.py  demo_user_agent.py  logging.yaml  pyproject.toml  requirements.txt  run_scenarios.py  setup.sh
.github/: code-graph-database-instructions.md  copilot-instructions.md  database-instructions.md  definition-of-done.md  integration-testing-instructions.md  python-instructions.md  unit-testing-instructions.md  using-jj-instructions.md
.github/workflows/: ci.yml  release.yml  update-deps.yml
docs/: commands.md
src/: run_scenarios.py
src/nostr_simulator/: __init__.py  config.py  config.test.py  logging_config.py  main.py  test_logging_config.py  test_main.py
src/nostr_simulator/agents/: __init__.py  base.py  base.test.py  client.py  relay.py  test_base.py  test_client.py  test_relay.py  test_user.py  user.py
src/nostr_simulator/agents/adversarial/: __init__.py  burst_spammer.py  hash_link_spammer.py  replay_attacker.py  sybil_attacker.py  test_burst_spammer.py  test_hash_link_spammer.py  test_replay_attacker.py  test_sybil_attacker.py
src/nostr_simulator/anti_spam/: __init__.py  base.py  event_age.py  group_signature.py  hashchain.py  pow.py  rate_limiting.py  reputation_tokens.py  test_base.py  test_event_age.py  test_group_signature.py  test_hashchain.py  test_pow.py  test_rate_limiting.py  test_reputation_tokens.py  test_wot.py  wot.py
src/nostr_simulator/metrics/: __init__.py  core_metrics.py  test_core_metrics.py
src/nostr_simulator/protocol/: __init__.py  events.py  keys.py  test_events.py  test_keys.py  test_validation.py  validation.py
src/nostr_simulator/scenarios/: __init__.py  attack_simulation_scenario.py  hashchain_scenario.py  multi_strategy_scenario.py  pow_scenario.py  reputation_tokens_scenario.py  runner.py  strategy_comparison_scenario.py  test_scenarios.py  user_behavior_scenario.py  wot_scenario.py
src/nostr_simulator/simulation/: __init__.py  engine.py  enhanced_engine.py  events.py  events.test.py  metrics.py  test_engine.py  test_events.py  test_metrics.py  test_time_manager.py  time_manager.py
tests/: conftest.py  test_config.py  test_events.py
